--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/Baruffi/simonbot.git"
   },
   "author": "Baruffi",
-  "license": "MIT",
+  "license": "GPLV3+",
   "dependencies": {
     "eris": "^0.13.2"
   }
