--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Baruffi",
   "license": "GPLV3+",
   "dependencies": {
-    "eris": "^0.13.2"
+    "eris": "^0.13.2",
+    "sqlite": "^4.0.19",
+    "sqlite3": "^5.0.2"
   }
 }
